@@ -75,9 +75,11 @@ GET_SET_KEY_FUNCTIONS( 2 )
 GET_SET_KEY_FUNCTIONS( 3 )
 GET_SET_KEY_FUNCTIONS( 4 )
 GET_SET_KEY_FUNCTIONS( 5 )
+#ifdef USE_JOYSTICK
 GET_SET_KEY_FUNCTIONS( 6 )
 GET_SET_KEY_FUNCTIONS( 7 )
 GET_SET_KEY_FUNCTIONS( 8 )
+#ifndef GEKKO
 GET_SET_KEY_FUNCTIONS( 9 )
 GET_SET_KEY_FUNCTIONS( 10 )
 GET_SET_KEY_FUNCTIONS( 11 )
@@ -85,6 +87,8 @@ GET_SET_KEY_FUNCTIONS( 12 )
 GET_SET_KEY_FUNCTIONS( 13 )
 GET_SET_KEY_FUNCTIONS( 14 )
 GET_SET_KEY_FUNCTIONS( 15 )
+#endif  /* #ifndef GEKKO */
+#endif  /* #ifdef USE_JOYSTICK */
 
 #define SUBMENU_KEY_SELECTIONS( which ) \
 \
